# adb-mcp

./: .gitignore  Cargo.toml  IMPROVEMENTS.md  README.md  flake.nix  test_server.sh
.github/: README.md
src/: errors.rs  handler.rs  lib.rs  main.rs
src/adb/: executor.rs  mod.rs  types.rs
src/filters/: logcat.rs  mod.rs
src/mcp/: cursor.rs  mod.rs  protocol.rs  server.rs
src/tools/: app.rs  device.rs  logcat.rs  mod.rs  shell.rs  ui.rs
