[package]
name = "adb-mcp"
version = "0.1.0"
edition = "2021"
authors = ["Luis Quiñones"]
description = "MCP server for Android Debug Bridge (ADB) interactions in Rust"
license = "MIT"

[[bin]]
name = "adb-mcp"
path = "src/main.rs"

[dependencies]
tokio = { version = "1.40", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.10"
chrono = "0.4"
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
thiserror = "1.0"
log = "0.4"
env_logger = "0.11"
base64 = "0.22"
uuid = { version = "1.10", features = ["v4", "serde"] }
async-trait = "0.1"

[dev-dependencies]
mockall = "0.12"

[profile.release]
opt-level = 3
lto = true
strip = true
